[FIX] Notifications cache

--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -76,6 +76,9 @@
       #main-container {
         margin: 20px;
       }
+      #video_here{
+        width: 360px;
+      }
     }
 
     .nav-item{
