[FIX] Login template

--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -132,6 +132,16 @@
                 </a>
               </li>
               <li class="nav-item">
+                <a class="nav-link" href="#" id="add-notification-nav">
+                  <img
+                    th:src="@{/images/notification_add.svg}"
+                    class="material-symbols-outlined"
+                    alt=""
+                  />
+                  Notificate users
+                </a>
+              </li>
+              <li class="nav-item">
                 <a class="nav-link" th:href="@{/}" id="back-option-nav">
                   <img
                     th:src="@{/images/undo.svg}"
