--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -36,8 +36,9 @@
         padding: 20px;
         background-color: #2a2d3e;
         border-radius: 8px;
-        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+        box-shadow: rgba(0, 0, 0, 0.56) 0px 22px 70px 4px;
         text-align: center;
+        margin:15px;
       }
 
       .login-box .logo {
