--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -156,6 +156,8 @@ body {
 }
 
 .movie-list-card {
+    width: 100%;
+    height: 100%;
     background-color: #1f1f1f;
     border: none;
     transition: transform 0.5s ease;
@@ -171,6 +173,7 @@ body {
 
 .movie-list-poster {
     width: 100%;
+    height: inherit;
     border-radius: 5px;
 }
 
@@ -205,6 +208,10 @@ body {
 a {
     text-decoration: none;
 }
+.movie-link{
+    height: 100%;
+    width: 100%;
+}
 
 .card-body {
     display: none;
@@ -213,6 +220,10 @@ a {
 .col-md-2 {
     display: flex;
     align-items: center;
+    flex-wrap: wrap;
+    flex-direction: row;
+    align-content: center;
+    justify-content: center;
 }
 
 
