--- a/src/main/resources/templates/register-code.html
+++ b/src/main/resources/templates/register-code.html
@@ -192,7 +192,7 @@
 
         // Envia os dados via AJAX
         $.ajax({
-          url: `http://192.168.100.12:8080/api/v1/verify`,
+          url: `http://openstreamify.ddns.net:8080/api/v1/verify`,
           type: "POST",
           contentType: "application/json",
           data: JSON.stringify({
