[ADD] Rating DTO, Email template with thymeleaf, Notification controller

--- a/src/main/resources/templates/assistir.html
+++ b/src/main/resources/templates/assistir.html
@@ -30,7 +30,7 @@
         controls
         preload="auto"
         autoplay
-        th:poster="@{${media.coverImgUrl}}"
+        th:poster="@{${media.backgroundImgUrl}}"
       >
         <source
           th:src="${config + '/api/v1/media/hls/' + media.rid + '.m3u8'}"
