--- a/src/main/resources/templates/password-reset.html
+++ b/src/main/resources/templates/password-reset.html
@@ -13,7 +13,7 @@
             color: #333;
         }
         .container {
-            width: 100%%;
+            width: 100%;
             max-width: 600px;
             margin: 0 auto;
             padding: 20px;
@@ -62,13 +62,13 @@
 <body>
     <div class="container">
         <div class="header">
-            <img src="http://192.168.100.12:8080/images/logo.png" alt="Logo">
+            <img src="http://openstreamify.ddns.net:8080/images/logo.png" alt="Logo">
         </div>
         <div class="content">
             <h1>Redefinição de Senha</h1>
             <p>Olá,</p>
             <p>Recebemos uma solicitação para redefinir a senha da sua conta. Clique no botão abaixo para redefinir sua senha:</p>
-            <a href="%s/auth/user/%s" class="button">Redefinir Senha</a>
+            <a href="http://openstreamify.ddns.net:8080/auth/user/{token}" class="button">Redefinir Senha</a>
             <p>Se você não solicitou a redefinição de senha, ignore este email.</p>
         </div>
         <div class="footer">
