--- a/src/main/resources/templates/password-reset.html
+++ b/src/main/resources/templates/password-reset.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="pt-BR" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Redefinição de Senha</title>
+    <title th:text="#{redefinition}">Redefinição de Senha</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -65,15 +65,15 @@
             <img src="http://openstreamify.ddns.net:8080/images/logo.png" alt="Logo">
         </div>
         <div class="content">
-            <h1>Redefinição de Senha</h1>
-            <p>Olá,</p>
-            <p>Recebemos uma solicitação para redefinir a senha da sua conta. Clique no botão abaixo para redefinir sua senha:</p>
+            <h1 th:text="#{redefinition}">Redefinição de Senha</h1>
+            <p th:text="#{greeting}">Olá,</p>
+            <p th:text="#{main-password-reset}">Recebemos uma solicitação para redefinir a senha da sua conta. Clique no botão abaixo para redefinir sua senha:</p>
             <a href="http://openstreamify.ddns.net:8080/auth/user/{token}" class="button">Redefinir Senha</a>
-            <p>Se você não solicitou a redefinição de senha, ignore este email.</p>
+            <p th:text="#{ignore-password-reset}">Se você não solicitou a redefinição de senha, ignore este email.</p>
         </div>
-        <div class="footer">
-            &copy; 2024 Sua Empresa. Todos os direitos reservados.<br>
-            Endereço da Empresa | Contato: ismaeldenunes@gmail.com
+        <div class="footer" th:text="#{rightsWithAdd}">
+            &copy; 2024 OpenStreamify. Todos os direitos reservados.<br>
+            230 Park Avenue South, New York, NY 10003 | Contato: ismaeldenunes@gmail.com
         </div>
     </div>
 </body>
