--- a/src/main/resources/templates/verification-code.html
+++ b/src/main/resources/templates/verification-code.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="pt-BR" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Código de Verificação</title>
+    <title th:text="#{main-text-code}">Código de Verificação</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -65,16 +65,16 @@
             <img src="http://openstreamify.ddns.net:8080/images/logo.png" alt="Logo">
         </div>
         <div class="content">
-            <h1>Código de Verificação</h1>
-            <p>Olá,</p>
-            <p>Seu código de verificação é:</p>
+            <h1 th:text="#{main-text-code}">Código de Verificação</h1>
+            <p th:text="#{greeting}">Olá,</p>
+            <p th:text="#{your-verification-code}">Seu código de verificação é:</p>
             <div class="code-box" th:text="${verificationCode}"></div>
-            <p>Use este código para concluir sua solicitação. O código expira em 10 minutos.</p>
-            <p>Se você não solicitou este código, ignore este e-mail.</p>
+            <p th:text="#{use-this-code}">Use este código para concluir sua solicitação. O código expira em 10 minutos.</p>
+            <p th:text="#{ignore-email}">Se você não solicitou este código, ignore este e-mail.</p>
         </div>
-        <div class="footer">
-            &copy; 2024 Sua Empresa. Todos os direitos reservados.<br>
-            Endereço da Empresa | Contato: ismaeldenunes@gmail.com
+        <div class="footer" th:text="#{rightsWithAdd}">
+            &copy; 2024 OpenStreamify. Todos os direitos reservados.<br>
+            230 Park Avenue South, New York, NY 10003 | Contato: ismaeldenunes@gmail.com
         </div>
     </div>
 </body>
