[FIX] Base URL to img tags and password-reset template

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -54,21 +54,21 @@
       <div class="carousel-inner">
         <div class="carousel-item active main-carrousel">
           <img
-            src="http://192.168.100.12:8080/api/v1/media/img/cover1.webp"
+            th:src="@{/api/v1/media/img/cover1.webp}"
             class="d-block w-100"
             alt="Banner 1"
           />
         </div>
         <div class="carousel-item main-carrousel">
           <img
-            src="http://192.168.100.12:8080/api/v1/media/img/cover2.jpg"
+            th:src="@{/api/v1/media/img/cover2.jpg}"
             class="d-block w-100"
             alt="Banner 2"
           />
         </div>
         <div class="carousel-item main-carrousel">
           <img
-            src="http://192.168.100.12:8080/api/v1/media/img/cover3.jpg"
+            th:src="@{/api/v1/media/img/cover3.jpg}"
             class="d-block w-100"
             alt="Banner 3"
           />
