--- a/src/main/resources/templates/password-reset.html
+++ b/src/main/resources/templates/password-reset.html
@@ -68,7 +68,7 @@
             <h1 th:text="#{redefinition}">Redefinição de Senha</h1>
             <p th:text="#{greeting}">Olá,</p>
             <p th:text="#{main-password-reset}">Recebemos uma solicitação para redefinir a senha da sua conta. Clique no botão abaixo para redefinir sua senha:</p>
-            <a href="http://openstreamify.ddns.net:8080/auth/user/{token}" class="button">Redefinir Senha</a>
+            <a th:href="@{${baseUrl} + '/auth/user/'+ ${token}}" class="button" th:text="#{reset}">Redefinir Senha</a>
             <p th:text="#{ignore-password-reset}">Se você não solicitou a redefinição de senha, ignore este email.</p>
         </div>
         <div class="footer" th:text="#{rightsWithAdd}">
