--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -269,6 +269,7 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script th:src="@{/js/jquery-3.7.1.js}"></script>
-    <script th:src="@{/js/admin.js}"></script>
+    <script th:src="@{/js/script.js}"></script>
+    <script type="module" th:src="@{/js/admin.js}"></script>
   </body>
 </html>
