--- a/src/main/resources/templates/details.html
+++ b/src/main/resources/templates/details.html
@@ -111,7 +111,7 @@
     <script src="https://cdn.jsdelivr.net/sockjs/1.0.2/sockjs.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/stomp.js/2.3.3/stomp.min.js"></script>
     <script th:src="@{/js/jquery-3.7.1.js}"></script>
-    <script th:src="@{/js/notification.js}"></script>
-    <script th:src="@{/js/ratings.js}"></script>
+    <script type="module" th:src="@{/js/notification.js}"></script>
+    <script type="module" th:src="@{/js/ratings.js}"></script>
   </body>
 </html>
