--- a/src/main/resources/templates/register-code.html
+++ b/src/main/resources/templates/register-code.html
@@ -151,7 +151,7 @@
         <button type="submit">Submit</button>
       </form>
     </div>
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script th:src="@{/js/jquery-3.7.1.js}"></script>
     <script>
       let timer;
 let countdown = 60; // Set the countdown duration in seconds
