--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -163,7 +163,7 @@
         </p>
       </div>
     </div>
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script th:src="@{/js/jquery-3.7.1.js}"></script>
     <script>
       document.querySelector("form").addEventListener("submit", function (e) {
         const password = document.getElementById("password").value;
