[FIX] JS files added separately

--- a/src/main/resources/templates/assistir.html
+++ b/src/main/resources/templates/assistir.html
@@ -72,7 +72,7 @@
         // Carregar a origem do vídeo e aplicar o tempo salvo
         if (Hls.isSupported()) {
           var hls = new Hls({
-            debug: true,
+           // debug: true,
             xhrSetup: function (xhr, url) {
               xhr.setRequestHeader(
                 "Authorization",
