--- a/src/main/resources/templates/register-code.html
+++ b/src/main/resources/templates/register-code.html
@@ -152,96 +152,7 @@
       </form>
     </div>
     <script th:src="@{/js/jquery-3.7.1.js}"></script>
-    <script>
-      let timer;
-let countdown = 60; // Set the countdown duration in seconds
-
-function startResendTimer() {
-    // Disable the button during the countdown
-    document.getElementById('reset-link').disabled = true;
-
-    // Start the countdown
-    timer = setInterval(updateTimer, 1000);
-}
-
-function updateTimer() {
-    const timerElement = document.getElementById('timer');
-
-    if (countdown > 0) {
-        timerElement.textContent = `in ${countdown}`;
-        countdown--;
-    } else {
-        // Enable the button when the countdown reaches zero
-        document.getElementById('resendBtn').disabled = false;
-        timerElement.textContent = '';
-
-        // Reset countdown for the next attempt
-        countdown = 60;
-
-        // Stop the timer
-        clearInterval(timer);
-    }
-}
-
-      document.addEventListener("DOMContentLoaded", function (e) {
-        startResendTimer();
-        const email = localStorage.getItem("code_verification_email");
-        if (email) {
-          document.getElementById("email").innerHTML = email;
-        } else {
-          console.log("Email not found in localStorage");
-        }
-      });
-
-      function moveToNext(currentInput, nextInputId) {
-        if (currentInput.value.length >= 1) {
-          document.getElementById(nextInputId).focus();
-        }
-      }
-
-      function moveToPrev(event, prevInputId, currentInputId) {
-        const currentInput = document.getElementById(currentInputId);
-        if (event.key === "Backspace" && currentInput.value === "") {
-          document.getElementById(prevInputId).focus();
-        }
-      }
-
-      $("#register-code-form").on("submit", function (e) {
-        e.preventDefault(); // Evita o comportamento padrão de submit
-
-        // Obtém os dados do formulário
-        var digit1 = $("#digit1").val();
-        var digit2 = $("#digit2").val();
-        var digit3 = $("#digit3").val();
-        var digit4 = $("#digit4").val();
-        var digit5 = $("#digit5").val();
-        var digit6 = $("#digit6").val();
-
-        var code = digit1 + digit2 + digit3 + digit4 + digit5 + digit6;
-        var email = localStorage.getItem("code_verification_email");
-        var codeString = code.toString();
-
-        // Envia os dados via AJAX
-        $.ajax({
-          url: `http://192.168.100.12:8080/api/v1/verify`,
-          type: "POST",
-          contentType: "application/json",
-          data: JSON.stringify({
-            email: email,
-            code: codeString,
-          }),
-          success: function (response) {
-            setTimeout(function () {
-              window.location.href = "/auth/login";
-            }, 2000);
-          },
-          error: function (xhr, status, error) {
-            console.log(error);
-          },
-        });
-      });
-
-
-    </script>
+    <script th:src="@{/js/script.js}"></script>
+    <script type="module" th:src="@{/js/register.js}"></script>
   </body>
 </html>
