[FIX] Removed nonsense enpoints and its requests

--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -164,77 +164,6 @@
       </div>
     </div>
     <script th:src="@{/js/jquery-3.7.1.js}"></script>
-    <script>
-      document.querySelector("form").addEventListener("submit", function (e) {
-        const password = document.getElementById("password").value;
-        const confirmPassword =
-          document.getElementById("confirm-password").value;
-        const login = document.getElementById("email").value;
-
-        if (password !== confirmPassword) {
-          alert("Passwords do not match!");
-          e.preventDefault(); // Impede o envio do formulário
-        } else {
-          e.preventDefault(); // Impede o envio do formulário até o AJAX terminar
-
-          // Inicia a requisição para obter a serverUrl
-          $.ajax({
-            url: `/api/config`,
-            type: "GET",
-            success: function (response) {
-              const serverUrl = response; // Define serverUrl
-
-              // Envia os dados via AJAX para registro
-              $.ajax({
-                url: `${serverUrl}/api/v1/auth/register`,
-                type: "POST",
-                contentType: "application/json",
-                data: JSON.stringify({
-                  login: login,
-                  password: password,
-                  role: "USER",
-                }),
-                success: function (response) {
-                  
-          const email = document.querySelector("#email").value;
-          localStorage.setItem("code_verification_email",email)
-          //TODO Create a function that gets the serverUrl
-
-              fetch(
-                "http://192.168.100.12:8080/api/v1/email/send-verification-code?email=" +
-                  encodeURIComponent(email),
-                {
-                  method: "POST",
-                }
-              )
-                .then((response) => {
-                  if (response.ok) {
-                    window.location.href = "/auth/register-code";
-                    return response.json(); // Tenta interpretar a resposta como JSON
-                  } else {
-                    return response.text(); // Se não for JSON, trata como texto
-                  }
-                })
-                .then((data) => {
-                  alert(typeof data === "string" ? data : data.message);
-                })
-                .catch((error) => {
-                  console.error("Error:", error);
-                  alert("Failed to send email");
-                });
-                
-                },
-                error: function (xhr, status, error) {
-                  alert("Erro ao fazer cadastro: " + xhr.responseText);
-                },
-              });
-            },
-            error: function (xhr, status, error) {
-              alert("Erro ao obter server URL: " + xhr.responseText);
-            },
-          });
-        }
-      });
-    </script>
+    <script type="module" th:src="@{/js/register-user.js}"></script>
   </body>
 </html>
