--- a/src/main/resources/templates/register-code.html
+++ b/src/main/resources/templates/register-code.html
@@ -153,6 +153,6 @@
     </div>
     <script th:src="@{/js/jquery-3.7.1.js}"></script>
     <script th:src="@{/js/script.js}"></script>
-    <script type="module" th:src="@{/js/register.js}"></script>
+    <script type="module" th:src="@{/js/register-code.js}"></script>
   </body>
 </html>
