[FIX] Emails templates to proper folder

--- a/src/main/resources/templates/mail-templates/password-reset.html
+++ b/src/main/resources/templates/mail-templates/password-reset.html
@@ -62,7 +62,7 @@
 <body>
     <div class="container">
         <div class="header">
-            <img src="http://openstreamify.ddns.net:8080/images/logo.png" alt="Logo">
+            <img th:src="@{ ${baseUrl} + '/images/logo.png'}" alt="Logo">
         </div>
         <div class="content">
             <h1 th:text="#{redefinition}">Redefinição de Senha</h1>
